--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,9 +6,29 @@
 </p>
 
 <p>
+  <strong>Категории:</strong>
+  <%= @post.categories_titles %>
+</p>
+
+
+
+<p>
   <strong>Body:</strong>
   <%= @post.body %>
 </p>
+
+<% if @post.comments.empty? %>
+  <p>Комментариев пока нет. Оставьте комментарий первым.</p>
+  <% else %>
+  <h3>Комментарии:</h3>
+  <% @post.comments.each do |c|%>
+    <p><%= c.body %></p>
+    <p><%= link_to "Удалить", c, method: :delete %></p>
+  <% end %>
+<% end %>
+
+<h4>Новый комментарий</h4>
+<%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
