--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,8 +6,8 @@
       </strong>
     </h4>
   </td>
-  <td><%= post.body %></td>
-  <td><%= link_to 'Show', post %></td>
+  <td><%= truncate(post.body, length:100) {link_to 'Читать далее', post} %></td>
+  <!-- <td><%= link_to 'Show', post %></td>
   <td><%= link_to 'Edit', edit_post_path(post) %></td>
-  <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
 </tr>
