--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,12 +45,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">MyHabr</a>
+        <a class="navbar-brand" href="/">MyHabr</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li>
+              <% if user_signed_in? %>
+                <%= link_to "Выйти", destroy_user_session_path, method: :delete %>
+                <span>E-mail <%= current_user.email %></span>
+              <% else %>
+                <%= link_to "Войти", new_user_session_path %>
+              <% end %>
+            </li>
+            <!-- <li><%= link_to "Link2", "/path2"  %></li>
+            <li><%= link_to "Link3", "/path3"  %></li> -->
           </ul>
         </div>
       </div>
@@ -64,12 +71,12 @@
         </div>
         <div class="col-lg-3">
           <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
+            <h3>Категории</h3>
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li class="nav-header"></li>
+              <% Category.all.each do |category| %>
+              <li><%= link_to category.title, category  %></li>
+              <% end %>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
