--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -30,7 +30,7 @@
     <!-- Size should be 57 x 57 pixels -->
     <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
 
-    <!-- For all other devices -->
+    <!---For all other devices
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
@@ -45,24 +45,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">MyHabr</a>
+        <a class="navbar-brand" href="#">MyHabr</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li>
-              <% if user_signed_in? %>
-                <%= link_to "Выйти", destroy_user_session_path, method: :delete %>
-                <span>E-mail <%= current_user.email %></span>
-              <% else %>
-                <%= link_to "Войти", new_user_session_path %>
-              <% end %>
-            </li>
-            <li>
-              <% if current_user && current_user.admin? %>
-                <%= link_to "Категории", admin_categories_path %>
-                <%= link_to "Пользователи", admin_users_path %>
-              <% end %>
-            </li>
-           <!--  <li><%= link_to "Link3", "/path3"  %></li> -->
+            <li><%= link_to "Link1", "/path1"  %></li>
+            <li><%= link_to "Link2", "/path2"  %></li>
+            <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
         </div>
       </div>
@@ -75,13 +63,13 @@
           <%= yield %>
         </div>
         <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Категории</h3>
+   <!--        <div class="well sidebar-nav">
+            <h3>Sidebar</h3>
             <ul class="nav nav-list">
-              <li class="nav-header"></li>
-              <% Category.all.each do |category| %>
-              <li><%= link_to category.title, category  %></li>
-              <% end %>
+              <li class="nav-header">Sidebar</li>
+              <li><%= link_to "Link1", "/path1"  %></li>
+              <li><%= link_to "Link2", "/path2"  %></li>
+              <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
