--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Body:</strong>
+  <strong>Текст:</strong>
   <%= @comment.body %>
 </p>
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', post_path(@comment.post_id) %>
+<%= link_to t('common.edit'), edit_comment_path(@comment) %> |
+<%= link_to t('common.back'), post_path(@comment.post_id) %>
