--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
             <li>
               <% if user_signed_in? %>
                 <%= link_to "Выйти", destroy_user_session_path, method: :delete %>
-                <span>E-mail <%= current_user.email %></span>
+                <span><%= t('common.email')%>: <%= current_user.email %></span>
               <% else %>
                 <%= link_to "Войти", new_user_session_path %>
               <% end %>
