--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,12 +12,17 @@
   </div>
 
   <div class="field">
+    <%= f.label :published, 'Опубликован' %><br>
+    <%= f.check_box :published %>
+  </div>
+
+  <div class="field">
     <%= f.label :category_ids, 'Категории' %><br>
     <%= f.collection_select :category_ids, Category.all, :id, :title, {}, { multiple: true } %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('.submit', action: @post.new_record? ? t('common.create') : t('common.update')) %>
   </div>
 
 <% end %>
