--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,13 +4,13 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
-
+<h1><%= t('.title') %></h1>
+<%= link_to 'Черновики', unpublished_posts_path %>
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Body</th>
+      <th>Заголовок</th>
+      <th>Текст</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to t('.new_post'), new_post_path %>
